<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        android:icon="@drawable/ic_baseline_post_add_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_del"
        android:title="@string/action_del"
        android:icon="@drawable/ic_baseline_delete_forever_24"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:icon="@drawable/ic_baseline_help_outline_24"
        app:showAsAction="never"/>

</menu>