<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/h_margin"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/title_note_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_title_note"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_note_input"
            android:layout_marginTop="@dimen/v_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_message_note"/>
    </com.google.android.material.textfield.TextInputLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="@dimen/v_margin"
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"/>

    <ProgressBar
        android:id="@+id/progress_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_gravity="center"/>
    </FrameLayout>


</LinearLayout>